update repositories for package update 3.105

--- a/repositories.conf
+++ b/repositories.conf
@@ -9,6 +9,7 @@ src/gz glinet_packages http://download.gl-inet.com/releases/packages-3.x/ipq40xx
 src/gz glinet_luci http://download.gl-inet.com/releases/packages-3.x/ipq40xx/luci
 src/gz glinet_routing http://download.gl-inet.com/releases/packages-3.x/ipq40xx/routing
 src/gz glinet_qca http://download.gl-inet.com/releases/packages-3.x/ipq40xx/qca
+src/gz glinet_sync_3.105 http://download.gl-inet.com/releases/packages-3.x/ipq40xx/sync_3.105
 ## This is the local package repository, do not remove!
 src imagebuilder file:packages
 src glinet file:glinet/ipq806x
