--- a/build_dir/target-arm_cortex-a7_uClibc-1.0.14_eabi/linux-ipq806x/linux-4.4.60/arch/arm/boot/dts/qcom-ipq4019-ap.dk04.1-c3.dts
+++ b/build_dir/target-arm_cortex-a7_uClibc-1.0.14_eabi/linux-ipq806x/linux-4.4.60/arch/arm/boot/dts/qcom-ipq4019-ap.dk04.1-c3.dts
@@ -20,8 +20,158 @@
 	model = "Qualcomm Technologies, Inc. IPQ4019/AP-DK04.1-C3";
 
 	soc {
-		nand: qpic-nand@79b0000 {
+			spi_1: spi@78b6000 { /* BLSP1 QUP2 */
+				status = "ok";
+			};
+
+			pinctrl@0x01000000 {
+			
+				spi_1_pins: spi_1_pinmux {
+					mux {
+						pins = "gpio44", "gpio46", "gpio47";
+						function = "blsp_spi1";
+						bias-disable;
+					};
+					
+					cs {
+						pins = "gpio45";
+						function = "gpio";
+						bias-pull-up;
+					};
+
+					reset {
+						pins = "gpio43";
+						function = "gpio";
+						output-high;
+					};
+
+					mux_2 {
+						pins = "gpio35";
+						function = "gpio";
+						output-high;
+					};
+					host_int {
+						pins = "gpio2";
+						function = "gpio";
+						input;
+					};
+					wake {
+						pins = "gpio48";
+						function = "gpio";
+						output-high;
+					};
+				};
+			};
+			
+			pcie0: pci@40000000 {
+				status = "ok";
+				perst-gpio = <&tlmm 38 0x1>;
+			};
+			
+			sdhc_1: sdhci@7824000{
+				status = "ok";
+				qcom,bus-speed-mode = "HS200_1p8v", "DDR_1p8v";
+				qcom,clk-rates = <400000 25000000 50000000 100000000 \
+						 192000000 384000000>;
+				pinctrl-0 = <&sd_0_pins>;
+				pinctrl-1 = <&sd_1_pins>;
+				pinctrl-names = "active", "sleep";
+				vqmmc-supply = <&vccq_sd0>;
+				cd-gpios = <&tlmm 3 0x1>;
+				sd-ldo-gpios = <&tlmm 33 0x1>;
+			};
+			ess-switch@c000000 {
+				switch_lan_bmp = <0x2e>; /* lan port bitmap */
+				switch_wan_bmp = <0x10>; /* wan port bitmap */
+			};
+			
+			edma@c080000 {
+			compatible = "qcom,ess-edma";
+			reg = <0xc080000 0x8000>;
+			qcom,page-mode = <0>;
+			qcom,rx-head-buf-size = <1540>;
+			qcom,num-gmac = <2>;
+			qcom,mdio-supported;
+
+			interrupts = <0 65 1>,
+					<0 66 1>,
+					<0 67 1>,
+					<0 68 1>,
+					<0 69 1>,
+					<0 70 1>,
+					<0 71 1>,
+					<0 72 1>,
+					<0 73 1>,
+					<0 74 1>,
+					<0 75 1>,
+					<0 76 1>,
+					<0 77 1>,
+					<0 78 1>,
+					<0 79 1>,
+					<0 80 1>,
+					<0 240 1>,
+					<0 241 1>,
+					<0 242 1>,
+					<0 243 1>,
+					<0 244 1>,
+					<0 245 1>,
+					<0 246 1>,
+					<0 247 1>,
+					<0 248 1>,
+					<0 249 1>,
+					<0 250 1>,
+					<0 251 1>,
+					<0 252 1>,
+					<0 253 1>,
+					<0 254 1>,
+					<0 255 1>;
+
+			gmac0 {
+				local-mac-address = [000000000000];
+				qcom,phy-mdio-addr = <3>;
+				qcom,poll-required = <1>;
+				qcom,poll-required-dynamic = <1>;
+				qcom,forced-speed = <1000>;
+				qcom,forced-duplex = <1>;
+				vlan-tag = <2 0x10>;
+			};
+
+			gmac1 {
+				local-mac-address = [000000000000];
+				qcom,poll-required-dynamic = <1>;
+				vlan-tag = <1 0x2e>;
+			};
+		};
+
+		i2c_0: i2c@78b7000 { /* BLSP1 QUP2 */
+			pinctrl-0 = <&i2c_0_pins>;
+			pinctrl-names = "default";
 			status = "disabled";
+		};
+		
+		gpio-leds {
+			compatible = "gpio-leds";
+
+			power_blue {
+				label = "power_blue_led";
+				gpios = <&tlmm 57 GPIO_ACTIVE_HIGH>;
+				default-state = "on";
+			};
+			power_blue2 {
+				label = "power_blue_led2";
+				gpios = <&tlmm 60 GPIO_ACTIVE_HIGH>;
+				default-state = "off";
+			};
+			power_white {
+				label = "power_white_led";
+				gpios = <&tlmm 61 GPIO_ACTIVE_LOW>;
+				#default-state = "off";
+			};
+			power_white2 {
+				label = "power_white_led2";
+				gpios = <&tlmm 66 GPIO_ACTIVE_LOW>;
+				#default-state = "off";
+			};
 		};
 	};
 };
